--- a/build.gradle
+++ b/build.gradle
@@ -5,18 +5,21 @@ plugins {
 group 'org.launchcode'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 17
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompileOnly 'junit:junit:4.12' 
+    testCompileOnly 'junit:junit:4.12'
     testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.8.1'
-    implementation('org.apache.commons:commons-csv:1.4')
+    implementation 'org.apache.commons:commons-csv:1.4'
 }
 
 test {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
